syntax = "proto3";

package orders;

option go_package = "m11ano.mipt_webdev_course.orders.v1;ordersv1";

// Orders service
service Orders {
  rpc SetOrderComposition (SetOrderCompositionRequest) returns (SetOrderCompositionResponse);
}

message OrderProduct {
  int64 product_id = 1;
  int32 quantity = 2;
  string price = 3;
}

message SetOrderCompositionRequest {
  int64 order_id = 1;
  bool is_ok = 2;
  repeated OrderProduct items = 3;
}

message SetOrderCompositionResponse {

}
